; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_image.c_get_color.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_image.c_get_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@colors = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local float @get_color(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca float, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca float, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %11 = load i32, i32* %5, align 4
  %12 = sitofp i32 %11 to float
  %13 = load i32, i32* %6, align 4
  %14 = sitofp i32 %13 to float
  %15 = fdiv float %12, %14
  %16 = fmul float %15, 5.000000e+00
  store float %16, float* %7, align 4
  %17 = load float, float* %7, align 4
  %18 = call i32 @floor(float %17)
  store i32 %18, i32* %8, align 4
  %19 = load float, float* %7, align 4
  %20 = call i32 @ceil(float %19)
  store i32 %20, i32* %9, align 4
  %21 = load i32, i32* %8, align 4
  %22 = sitofp i32 %21 to float
  %23 = load float, float* %7, align 4
  %24 = fsub float %23, %22
  store float %24, float* %7, align 4
  %25 = load float, float* %7, align 4
  %26 = fsub float 1.000000e+00, %25
  %27 = load i32**, i32*** @colors, align 8
  %28 = load i32, i32* %8, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i32*, i32** %27, i64 %29
  %31 = load i32*, i32** %30, align 8
  %32 = load i32, i32* %4, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %31, i64 %33
  %35 = load i32, i32* %34, align 4
  %36 = sitofp i32 %35 to float
  %37 = fmul float %26, %36
  %38 = load float, float* %7, align 4
  %39 = load i32**, i32*** @colors, align 8
  %40 = load i32, i32* %9, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i32*, i32** %39, i64 %41
  %43 = load i32*, i32** %42, align 8
  %44 = load i32, i32* %4, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %43, i64 %45
  %47 = load i32, i32* %46, align 4
  %48 = sitofp i32 %47 to float
  %49 = fmul float %38, %48
  %50 = fadd float %37, %49
  store float %50, float* %10, align 4
  %51 = load float, float* %10, align 4
  ret float %51
}

declare dso_local i32 @floor(float) #1

declare dso_local i32 @ceil(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
